# town-restoration

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/support/: Main.java  Menu.java
app/src/main/jni/: Android.mk  CMakeLists.txt  ImGuiStuff.h  Main.cpp  Unity.h  frontend.h  il2cpp_stuff.h  menu.h  menu_hook.h
app/src/main/jni/Includes/: Logger.h  Macros.h  Utils.h  obfuscate.h
app/src/main/jni/KittyMemory/: KittyMemory.cpp  MemoryBackup.cpp  MemoryPatch.cpp  MemoryPatch.hpp
app/src/main/jni/Menu/: Menu.h  Setup.h
app/src/main/jni/Misc/: JNIHooks.h  JNIStuff.h  enums.h
app/src/main/jni/Misc/owo-hook/: README.md  owo.h
app/src/main/jni/SWUTS/: README.md
app/src/main/jni/SWUTS/services/: adjust.h
app/src/main/jni/Substrate/: SubstrateDebug.cpp  SubstrateHook.cpp  SubstratePosixMemory.cpp  SymbolFinder.cpp
app/src/main/jni/Unity/: Input.h  Screen.h
app/src/main/jni/il2cpp/: il2cpp_api.h  il2cpp_types.h
app/src/main/jni/il2cpp_helpers/: easy_api.h
app/src/main/jni/lib-utils/: Delegate.h  HttpResponse.h  LitJson.h
app/src/main/jni/mongoose/: mongoose.c  mongoose.h
app/src/main/jni/mongoose/src/: arch_unix.h  config.h  net.c
app/src/main/jni/toro_webserver/: README.md  toro_webserver.h
app/src/main/jni/toro_webserver/actions/: default_success.h  gameServer_list.h  getClientVersionInfo.h  getLoginToken.h  getnid.h  policy_agree.h  register_push.h  tos.h
app/src/main/jni/toro_webserver/actions/custom/: tos.h
app/src/main/jni/toro_webserver/actions/linesdk/auth/: getnid.h
app/src/main/jni/toro_webserver/actions/linesdk/logging/: sendlog.h
app/src/main/jni/toro_webserver/actions/neptuneapi/info/: gameServer_list.h  getClientVersionInfo.h  language_list.h
app/src/main/jni/toro_webserver/actions/neptuneapi/login/: getLoginToken.h  policy_agree.h  register_push.h
app/src/main/jni/xdl/: xdl.c  xdl_iterate.c  xdl_linker.c  xdl_lzma.c
app/src/main/res/values/: styles.xml
